--- a/Frontend/PaginaFrontal/css/product-details.css
+++ b/Frontend/PaginaFrontal/css/product-details.css
@@ -480,7 +480,8 @@
 model-viewer {
   flex: 1;
   width: 100%;
-  background-color: #f0f0f0;
+  background-color: #363636;
+  
 }
 
 .modal-controls {
